--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,4 +1,4 @@
-name: Deploy
+name: Deploy to GitHub Pages
 
 on:
   push:
@@ -20,27 +20,24 @@ jobs:
 
     steps:
       - name: Checkout
-        uses: actions/checkout@v5
+        uses: actions/checkout@v4  # v5도 OK지만 v4가 더 안정적
 
-      - name: Setup Environment Variables
+      - name: Create .env file from secrets
         run: |
-          echo "VITE_NAVER_MAP_CLIENT_ID=$VITE_NAVER_MAP_CLIENT_ID
-          VITE_KAKAO_SDK_JS_KEY=$VITE_KAKAO_SDK_JS_KEY
-          VITE_SERVER_URL=$VITE_SERVER_URL
-          VITE_STATIC_ONLY=$VITE_STATIC_ONLY" >> .env
-        env:
-          VITE_NAVER_MAP_CLIENT_ID: ${{ secrets.VITE_NAVER_MAP_CLIENT_ID }}
-          VITE_KAKAO_SDK_JS_KEY: ${{ secrets.VITE_KAKAO_SDK_JS_KEY }}
-          VITE_SERVER_URL: ${{ vars.VITE_SERVER_URL }}
-          VITE_STATIC_ONLY: ${{ vars.VITE_STATIC_ONLY }}
+          cat << EOF > .env
+          VITE_NAVER_MAP_CLIENT_ID=${{ secrets.VITE_NAVER_MAP_CLIENT_ID }}
+          VITE_KAKAO_SDK_JS_KEY=${{ secrets.VITE_KAKAO_SDK_JS_KEY }}
+          VITE_STATIC_ONLY=true
+          # VITE_SERVER_URL=  # 필요하면 여기에 값 넣기, 아니면 주석
+          EOF
 
-      - name: Use Node.js 22.x
+      - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
-          node-version: 22.x
+          node-version: 20  # 22.x 대신 LTS 20 추천 (안정성)
 
       - name: Install dependencies
-        run: npm install
+        run: npm ci  # npm install 대신 ci 추천 (캐시 + 정확성)
 
       - name: Build
         run: npm run build
@@ -51,7 +48,7 @@ jobs:
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
-          path: "./build"
+          path: ./dist  # ← 핵심 수정: Vite는 dist 폴더!
 
       - name: Deploy to GitHub Pages
         id: deployment
